--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nova
-version = 2013.2.3
+version = 2014.1
 summary = Cloud computing fabric controller
 description-file =
     README.rst
@@ -29,6 +29,9 @@ packages =
 [entry_points]
 nova.image.download.modules =
     file = nova.image.download.file
+nova.virt.image.handlers =
+    download = nova.virt.imagehandler.download:DownloadImageHandler
+    libvirt_rbd_clone = nova.virt.libvirt.imagehandler:RBDCloneImageHandler
 console_scripts =
     nova-all = nova.cmd.all:main
     nova-api = nova.cmd.api:main
@@ -50,12 +53,13 @@ console_scripts =
     nova-network = nova.cmd.network:main
     nova-novncproxy = nova.cmd.novncproxy:main
     nova-objectstore = nova.cmd.objectstore:main
-    nova-rootwrap = nova.openstack.common.rootwrap.cmd:main
+    nova-rootwrap = oslo.rootwrap.cmd:main
     nova-scheduler = nova.cmd.scheduler:main
     nova-spicehtml5proxy = nova.cmd.spicehtml5proxy:main
     nova-xvpvncproxy = nova.cmd.xvpvncproxy:main
 
 nova.api.v3.extensions =
+    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
     admin_actions = nova.api.openstack.compute.plugins.v3.admin_actions:AdminActions
     admin_password = nova.api.openstack.compute.plugins.v3.admin_password:AdminPassword
     agents = nova.api.openstack.compute.plugins.v3.agents:Agents
@@ -66,11 +70,11 @@ nova.api.v3.extensions =
     cells = nova.api.openstack.compute.plugins.v3.cells:Cells
     certificates = nova.api.openstack.compute.plugins.v3.certificates:Certificates
     config_drive = nova.api.openstack.compute.plugins.v3.config_drive:ConfigDrive
+    console_auth_tokens = nova.api.openstack.compute.plugins.v3.console_auth_tokens:ConsoleAuthTokens
     console_output = nova.api.openstack.compute.plugins.v3.console_output:ConsoleOutput
     consoles = nova.api.openstack.compute.plugins.v3.consoles:Consoles
-    coverage = nova.api.openstack.compute.plugins.v3.coverage:Coverage
+    create_backup = nova.api.openstack.compute.plugins.v3.create_backup:CreateBackup
     deferred_delete = nova.api.openstack.compute.plugins.v3.deferred_delete:DeferredDelete
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
     evacuate = nova.api.openstack.compute.plugins.v3.evacuate:Evacuate
     extended_availability_zone = nova.api.openstack.compute.plugins.v3.extended_availability_zone:ExtendedAvailabilityZone
     extended_server_attributes = nova.api.openstack.compute.plugins.v3.extended_server_attributes:ExtendedServerAttributes
@@ -87,13 +91,14 @@ nova.api.v3.extensions =
     hypervisors = nova.api.openstack.compute.plugins.v3.hypervisors:Hypervisors
     instance_actions = nova.api.openstack.compute.plugins.v3.instance_actions:InstanceActions
     ips = nova.api.openstack.compute.plugins.v3.ips:IPs
-    instance_usage_audit_log = nova.api.openstack.compute.plugins.v3.instance_usage_audit_log:InstanceUsageAuditLog
     keypairs = nova.api.openstack.compute.plugins.v3.keypairs:Keypairs
-    limits = nova.api.openstack.compute.plugins.v3.limits:Limits
+    lock_server = nova.api.openstack.compute.plugins.v3.lock_server:LockServer
+    migrate_server = nova.api.openstack.compute.plugins.v3.migrate_server:MigrateServer
     migrations = nova.api.openstack.compute.plugins.v3.migrations:Migrations
     multinic = nova.api.openstack.compute.plugins.v3.multinic:Multinic
     multiple_create = nova.api.openstack.compute.plugins.v3.multiple_create:MultipleCreate
-    quota_classes = nova.api.openstack.compute.plugins.v3.quota_classes:QuotaClasses
+    pause_server = nova.api.openstack.compute.plugins.v3.pause_server:PauseServer
+    pci = nova.api.openstack.compute.plugins.v3.pci:Pci
     quota_sets = nova.api.openstack.compute.plugins.v3.quota_sets:QuotaSets
     remote_consoles = nova.api.openstack.compute.plugins.v3.remote_consoles:RemoteConsoles
     rescue = nova.api.openstack.compute.plugins.v3.rescue:Rescue
@@ -106,49 +111,33 @@ nova.api.v3.extensions =
     servers = nova.api.openstack.compute.plugins.v3.servers:Servers
     services = nova.api.openstack.compute.plugins.v3.services:Services
     shelve = nova.api.openstack.compute.plugins.v3.shelve:Shelve
-    simple_tenant_usage = nova.api.openstack.compute.plugins.v3.simple_tenant_usage:SimpleTenantUsage
-    used_limits = nova.api.openstack.compute.plugins.v3.used_limits:UsedLimits
+    suspend_server = nova.api.openstack.compute.plugins.v3.suspend_server:SuspendServer
     versions = nova.api.openstack.compute.plugins.v3.versions:Versions
 
 nova.api.v3.extensions.server.create =
+    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
     availability_zone = nova.api.openstack.compute.plugins.v3.availability_zone:AvailabilityZone
     block_device_mapping = nova.api.openstack.compute.plugins.v3.block_device_mapping:BlockDeviceMapping
     config_drive = nova.api.openstack.compute.plugins.v3.config_drive:ConfigDrive
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
     keypairs_create = nova.api.openstack.compute.plugins.v3.keypairs:Keypairs
     multiple_create = nova.api.openstack.compute.plugins.v3.multiple_create:MultipleCreate
-    personalities = nova.api.openstack.compute.plugins.v3.personalities:Personalities
-    scheduler_hints = nova.api.openstack.compute.plugins.v3.scheduler_hints:SchedulerHints
-    security_groups = nova.api.openstack.compute.plugins.v3.security_groups:SecurityGroups
-    user_data = nova.api.openstack.compute.plugins.v3.user_data:UserData
-
-nova.api.v3.extensions.server.create.deserialize =
-    availability_zone = nova.api.openstack.compute.plugins.v3.availability_zone:AvailabilityZone
-    block_device_mapping = nova.api.openstack.compute.plugins.v3.block_device_mapping:BlockDeviceMapping
-    config_drive = nova.api.openstack.compute.plugins.v3.config_drive:ConfigDrive
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-    multiple_create = nova.api.openstack.compute.plugins.v3.multiple_create:MultipleCreate
-    personalities = nova.api.openstack.compute.plugins.v3.personalities:Personalities
     scheduler_hints = nova.api.openstack.compute.plugins.v3.scheduler_hints:SchedulerHints
     security_groups = nova.api.openstack.compute.plugins.v3.security_groups:SecurityGroups
     user_data = nova.api.openstack.compute.plugins.v3.user_data:UserData
 
 nova.api.v3.extensions.server.rebuild =
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-    personalities = nova.api.openstack.compute.plugins.v3.personalities:Personalities
-
-nova.api.v3.extensions.server.rebuild.deserialize =
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-    personalities = nova.api.openstack.compute.plugins.v3.personalities:Personalities
-
-nova.api.v3.extensions.server.resize =
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-
-nova.api.v3.extensions.server.resize.deserialize =
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
+    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
 
 nova.api.v3.extensions.server.update =
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
+    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
+
+# These are for backwards compat with Havana notification_driver configuration values
+oslo.messaging.notify.drivers =
+    nova.openstack.common.notifier.log_notifier = oslo.messaging.notify._impl_log:LogDriver
+    nova.openstack.common.notifier.no_op_notifier = oslo.messaging.notify._impl_noop:NoOpDriver
+    nova.openstack.common.notifier.rpc_notifier2 = oslo.messaging.notify._impl_messaging:MessagingV2Driver
+    nova.openstack.common.notifier.rpc_notifier = oslo.messaging.notify._impl_messaging:MessagingDriver
+    nova.openstack.common.notifier.test_notifier = oslo.messaging.notify._impl_test:TestDriver
 
 [build_sphinx]
 all_files = 1
