--- a/etc/nova/rootwrap.d/network.filters
+++ b/etc/nova/rootwrap.d/network.filters
@@ -48,6 +48,11 @@ ebrctl: CommandFilter, ebrctl, root
 # nova/virt/libvirt/vif.py: 'mm-ctl', ...
 mm-ctl: CommandFilter, mm-ctl, root
 
+# nova/virt/libvirt/vif.py: 'vemctl', ...
+# nova/virt/libvirt/vif.py: 'vemctl', 'del-port', ...
+# nova/network/linux_net.py: 'vemctl', ....
+vemctl: CommandFilter, vemctl, root
+
 # nova/network/linux_net.py: 'ebtables', '-D' ...
 # nova/network/linux_net.py: 'ebtables', '-I' ...
 ebtables: CommandFilter, ebtables, root
